changing bdocker accounting default file location

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,7 +38,7 @@ WND_base_url: "unix://var/run/docker.sock"
 
 # SGEAccountingController (add more modules)
 AND_controller: "SGEAccountingController"
-AND_bdocker_accounting: "/root/bdocker_accounting"
+bdocker_accounting: "/etc/bdocker_accounting"
 
 AND_cred_controller: "TokenController"
 
